// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stackable Tests renders with proper gaps 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #f9f9f9;
  color: #0d0f10;
}

<div
  className="c0"
  type="light"
/>
`;

exports[`Stackable Tests renders with proper gaps 2`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #e9e9e9;
  color: #0d0f10;
}

<div
  className="c0"
  type="medium"
/>
`;

exports[`Stackable Tests renders with proper gaps 3`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #808080;
  color: #f9f9f9;
}

<div
  className="c0"
  type="dark"
/>
`;

exports[`Stackable Tests renders with proper gaps 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  background-color: #f9f9f9;
  color: #0d0f10;
}

<div
  className="c0"
  type={null}
/>
`;
